2005-07-12 Mikhail Khodjaiants
	Bug 103522: Launcher: Stop at main checkbox is covered with default launch dialog size.
	Moved the "Stop in main" and "Advanced" buttons on the line below.
	* CDebuggerTab.java

2005-06-28 Mikhail Khodjaiants
	Bug 89276: Typo in org.eclipse.cdt.launch/plugin.xml.
	* plugin.xml

2005-05-21 Mikhail Khodjaiants
	Bug 91374: CDT launch should set ATTR_PROCESS_TYPE.
	* AbstractCLaunchDelegate.java
	* CoreFileLaunchDelegate.java
	* LocalRunLaunchDelegate.java

2005-05-15 Mikhail Khodjaiants
	Bug 87556: Post-mortem debug fails silently if core file is inaccessible.
	Applied patch from Joanne Woo (Monta Vista).
	* CoreFilePrompter.java
	* CoreFileLaunchDelegate.java
	* LaunchMessages.properties

2005-05-18 David Inglis
	Fixed bug 39581 & part of 46746
	
	* AbstractCLaunchDelegate.java
	* LocalAttachLauchDelegate.java
	* LocalRunLaunchDelegate.java
	* LocalAttachLaunchDelegate.java
	* LocalAttachLaunchConfigurationTabGroup.java
	* LocalRunLaunchConfigurationTabGroup.java
	+ CMainAttachTab.java
	* CMainTab.java
	
	
2005-05-09 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	Removed the old source lookup related classes and interfaces.
	* CoreFileLaunchConfigurationTabGroup.java
	* LaunchMessages.properties
	* LocalAttachLaunchConfigurationTabGroup.java
	* LocalRunLaunchConfigurationTabGroup.java
	- CSourceLookupTab.java

2005-04-21 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	* CoreFileLaunchConfigurationTabGroup.java
	* LocalAttachLaunchConfigurationTabGroup.java
	* LocalRunLaunchConfigurationTabGroup.java
	* plugin.xml

2005-04-07 David Daoust
	Update icons
	
2005-02-24 Alain Magloire
	Fix for PR 86443

	* src/org/eclipse/cdt/launch/internal/ui/LaunchMessages.properties
	* src/org/eclipse/cdt/launch/ui/CArgumentsTab.java

2005-02-03 David Inglis
	Fixed PR#84361
	